test: add tests to user service